Frontend for fileupload

--- a/Code/SA_Java_Journals_site/src/index.html
+++ b/Code/SA_Java_Journals_site/src/index.html
@@ -6,6 +6,7 @@
         <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700">
         <link rel="stylesheet" href="css/bootstrap.css"/>
         <link rel="stylesheet" href="css/bootstrap-theme.css"/>
+        <link rel="stylesheet" href="css/upl.css"/>
 		<link rel="icon" href="img/favicon.png">
 
 		<script src="app/require.config.js"></script>
